mir/src/snapshots/transmute_mir__tests__free_statements_without_main.snap
---
source: mir/src/lib.rs
expression: make_mir(hir)
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "only functions are allowed at top level",
                span: 1:1; [0, 10],
                level: Error,
                generated_at: (
                    "mir/src/lib.rs",
                    71,
                ),
            },
        ],
    },
)
